--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ h3 {
     font-weight: normal;
     font-family: 'Martel', serif;
     z-index: 2;
-    justify-items: center;
+    /* justify-items: center; */
     align-items: start;
 }
 
