--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 
+
 #navbar-brand {
-    font-family: 'Cabin', sans-serif;
-    text-transform: uppercase;
+    font-family: 'Glegoo', serif;
     letter-spacing: 2px;
 }
 
@@ -44,32 +44,29 @@
 .display-4 {
     font-size: 24pt;
     font-weight: normal;
-    font-family: 'Cabin', sans-serif;
-    text-transform: uppercase;
+    font-family: 'Glegoo', serif;
 }
 
 .display-logo {
     position: relative;
-    bottom: 75%;
+    bottom: 78%;
     text-align: center;
     text-shadow: black -5px 5px;
 }
 
 h1 {
-    font-size: 86pt;
+    font-size: 72pt;
     font-weight: normal;
-    font-family: 'Cabin', sans-serif;
-    text-transform: uppercase;
+    font-family: 'Glegoo', serif;
     color: white;
     text-shadow: black -5px 5px;
     letter-spacing: 5px;
 }
 
 h2 {
-    font-size: 24pt;
+    font-size: 20pt;
     font-weight: normal;
-    font-family: 'Cabin', sans-serif;
-    text-transform: uppercase;
+    font-family: 'Glegoo', serif;
 }
 
 h3 {
@@ -80,9 +77,9 @@ h3 {
 
 .grid {
     position: relative;
-    top: 0;
+    top: 50px;
     display: none;
-    grid-template-columns: [1] auto [2] auto [3] auto [4] auto [5] 20% [6];
+    grid-template-columns: [1] 25% [2] 25% [3] 25% [4] 25% [5];
     grid-auto-rows: [1] auto [2] auto [3] auto [4] auto [5] auto [6] auto [7] auto [8] auto [9];
     grid-row-gap: 50px;
     grid-column-gap: 50px;
@@ -91,15 +88,11 @@ h3 {
 
 #title {
     grid-column-start: 2;
-    grid-column-end: 5;
+    grid-column-end: 4;
     grid-row-start: 2;
     grid-row-end: 3;
-    font-size: 36pt;
-    font-weight: normal;
-    font-family: 'Cabin', sans-serif;
-    text-transform: uppercase;
     z-index: 2;
-    /* justify-items: center; */
+    justify-items: center;
     align-items: start;
 }
 
@@ -116,8 +109,8 @@ h3 {
     padding: 15px 25px;
     width: auto;
     border-radius: 0;
-    font-family: Arial, Helvetica, sans-serif;
     font-weight: normal;
+    font-family: 'Glegoo', serif;
 }
 
 #itinerary-add-btn2:hover {
@@ -127,7 +120,7 @@ h3 {
 
 #main-img-container {
     grid-column-start: 1;
-    grid-column-end: 6;
+    grid-column-end: 5;
     grid-row-start: 1;
     grid-row-end: 5;
     width: 100%;
@@ -137,34 +130,38 @@ h3 {
 
 .main-img {
     width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 
 #search-results {
     grid-column-start: 1;
-    grid-column-end: 5;
+    grid-column-end: 4;
     grid-row-start: 5;
     grid-row-end: 7;
     padding: 50px;
     border: palevioletred solid 2pt;
+    background-color: white;
 }
 
 #home-weather-info{
-    grid-column-start: 5;
-    grid-column-end: 6;
+    grid-column-start: 4;
+    grid-column-end: 5;
     grid-row-start: 5;
     grid-row-end: 6;
     padding: 50px;
     border: orange solid 2pt;
+    background-color: white;
 }
 
 #links {
-    grid-column-start: 5;
-    grid-column-end: 6;
+    grid-column-start: 4;
+    grid-column-end: 5;
     grid-row-start: 6;
     grid-row-end: 7;
     padding: 50px;
     border: darkmagenta solid 2pt;
+    background-color: white;
 }
 
 a {
@@ -178,20 +175,22 @@ a:hover {
 
 #itinerary {
     grid-column-start: 1;
-    grid-column-end: 6;
+    grid-column-end: 5;
     grid-row-start: 7;  
     grid-row-end: 8;
+    background-color: white;
 }
 
 #trails {
     grid-column-start: 1;
-    grid-column-end: 6;
+    grid-column-end: 5;
     grid-row-start: 8;
     grid-row-end: 9;
     padding: 50px;
-    border: palegreen solid 2pt;
+    border: darkslateblue solid 2pt;
     height: 400px;
     overflow: scroll;
+    background-color: white;
 }
 
 #trail {
