--- a/assets/css/dropdown.css
+++ b/assets/css/dropdown.css
@@ -71,3 +71,19 @@
   
   /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
   .show {display:block;}
+
+  @media only screen and (max-width: 991px) {
+
+  .dropbtn {
+      width: 100%;
+      padding: 15px;
+      font-size: 11pt;
+    }
+
+    .dropdown1 {
+      bottom: 70%;
+      margin-left: 20%;
+      width: 60%;
+    }
+
+  }
