--- a/assets/css/dropdown.css
+++ b/assets/css/dropdown.css
@@ -81,9 +81,13 @@
     }
 
     .dropdown1 {
-      bottom: 70%;
+      bottom: 78%;
       margin-left: 20%;
       width: 60%;
+    }
+
+    .dropdown1-content {
+      max-height: 450px;
     }
 
   }
