--- a/assets/css/dropdown.css
+++ b/assets/css/dropdown.css
@@ -1,7 +1,7 @@
 /* Dropdown Button */
 .dropbtn {
     background-color: white;
-    color: black;
+    color: #54595a;
     border: none;
     border-radius: 0;
     width:  100%;
@@ -15,7 +15,7 @@
   
   /* Dropdown button on hover & focus */
   .dropbtn:hover, .dropbtn:focus {
-    background-color: black;
+    background-color: #54595a;
     color: white;
     border-radius: 0;
   }
@@ -60,7 +60,7 @@
   
   /* Links inside the dropdown */
   .dropdown1-content p {
-    color: black;
+    color: #54595a;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
