--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@
 }
 
 .list:hover {
-    border-bottom: grey dotted 1pt;
+    border-bottom: #54595a dotted 1pt;
 }
 
 #initial {
@@ -51,7 +51,7 @@
     position: relative;
     bottom: 78%;
     text-align: center;
-    text-shadow: black -5px 5px;
+    text-shadow: #54595a -5px 5px;
 }
 
 h1 {
@@ -59,7 +59,7 @@ h1 {
     font-weight: normal;
     font-family: 'Glegoo', serif;
     color: white;
-    text-shadow: black -5px 5px;
+    text-shadow: #54595a -5px 5px;
     letter-spacing: 5px;
 }
 
@@ -104,7 +104,7 @@ h3 {
     align-items: start;
     z-index: 3;
     background-color: white;
-    color: black;
+    color: #54595a;
     border: none;
     padding: 15px 25px;
     width: auto;
@@ -115,7 +115,7 @@ h3 {
 }
 
 #itinerary-add-btn:hover {
-    background-color: black;
+    background-color: #54595a;
     color: white;
 }
 
@@ -127,8 +127,8 @@ h3 {
     width: 100%;
     overflow: hidden;
     z-index: 1;
-    border: black solid 2pt;
-    box-shadow: black -10px 10px;
+    border: #54595a solid 2pt;
+    box-shadow: #54595a -10px 10px;
 }
 
 .main-img {
@@ -143,8 +143,8 @@ h3 {
     grid-row-start: 5;
     grid-row-end: 7;
     padding: 50px;
-    border: hotpink solid 2pt;
-    box-shadow: hotpink -10px 10px;
+    border: #cd9d8d solid 2pt;
+    box-shadow: #cd9d8d -10px 10px;
     background-color: white;
 }
 
@@ -153,14 +153,15 @@ h3 {
     grid-column-end: 5;
     grid-row-start: 5;
     grid-row-end: 6;
-    padding: 50px;
-    border: orange solid 2pt;
-    box-shadow: orange -10px 10px;
+    padding: 35px;
+    border: #dd9166 solid 2pt;
+    box-shadow: #dd9166 -10px 10px;
     background-color: white;
 }
 
-#weather-icon {
-    float: right;
+#weatherDiv{
+    float: left;
+    padding: 15px;
 }
 
 #links {
@@ -169,8 +170,8 @@ h3 {
     grid-row-start: 6;
     grid-row-end: 7;
     padding: 50px;
-    border: darkmagenta solid 2pt;
-    box-shadow: darkmagenta -10px 10px;
+    border: #9f8f80 solid 2pt;
+    box-shadow: #9f8f80 -10px 10px;
     background-color: white;
 }
 
@@ -180,7 +181,7 @@ a {
 
 a:hover {
     text-decoration: none;
-    color: black;
+    color: #54595a;
 }
 
 #itinerary {
@@ -189,8 +190,8 @@ a:hover {
     grid-row-start: 7;  
     grid-row-end: 8;
     background-color: white;
-    border: solid lightseagreen 2pt;
-    box-shadow: lightseagreen -10px 10px;
+    border: solid #2c656d 2pt;
+    box-shadow: #2c656d -10px 10px;
     width: 100%;
 }
 
@@ -200,8 +201,8 @@ a:hover {
     grid-row-start: 8;
     grid-row-end: 9;
     padding: 50px;
-    border: darkslateblue solid 2pt;
-    box-shadow: darkslateblue -10px 10px;
+    border: #5b653d solid 2pt;
+    box-shadow: #5b653d -10px 10px;
     height: 400px;
     overflow: scroll;
     background-color: white;
@@ -228,24 +229,23 @@ a:hover {
 }
 
 #itinerary-data-head {
-    background-color: rgba(30, 39, 22, .4);
-    padding-left: 10px 0px 0px 10px;
+    background-color: #2c656d;
+    opacity: .8;
+    padding: 10px;
     color: white;
 }
 .itinerary-data-row {
     height: 50px;
-    background-color: rgba(30, 39, 22, .2);
-    color: black;
+    background-color: #f8f9fa;
+    color: #54595a;
     font-weight: bold;
     padding: 10px 0;
-    opacity: .8;
+    opacity: .75;
     vertical-align: middle;
 }
 
 #weatherDiv{
     float: left;
-
-
 }
 
 #edit {
@@ -253,14 +253,16 @@ a:hover {
     border-radius: 0;
     border: none;
     padding: 5px 15px;
-    background-color: lightseagreen;
+    border: solid #2c656d 2pt;
+    background-color: #2c656d;
     color: white;
 }
 .itinerary-data-row:hover {
     opacity: 1;
 }
 .itinerary-remove {
-    color: red;
+    margin-top: 5px;
+    color: #2c656d;
     cursor: pointer;
     opacity: 0.6;
 }
@@ -272,7 +274,7 @@ a:hover {
 
     h1 {
         font-size: 48pt;
-        text-shadow: black -2.5px 2.5px;
+        text-shadow: #54595a -2.5px 2.5px;
     }
 
     h2 {
@@ -314,7 +316,7 @@ a:hover {
         width: 100%;
         overflow: hidden;
         z-index: 1;
-        box-shadow: black -5px 5px;
+        box-shadow: #54595a -5px 5px;
     }
 
     #search-results {
@@ -323,8 +325,8 @@ a:hover {
         grid-row-start: 5;
         grid-row-end: 6;
         padding: 25px;
-        border: hotpink solid 2pt;
-        box-shadow: hotpink -5px 5px;
+        border: #cd9d8d solid 2pt;
+        box-shadow: #cd9d8d -5px 5px;
         background-color: white;
     }
     
@@ -334,7 +336,7 @@ a:hover {
         grid-row-start: 6;
         grid-row-end: 7;
         padding: 25px;
-        box-shadow: orange -5px 5px;
+        box-shadow: #dd9166 -5px 5px;
     }
     
     #links {
@@ -343,7 +345,7 @@ a:hover {
         grid-row-start: 6;
         grid-row-end: 7;
         padding: 25px;
-        box-shadow: darkmagenta -5px 5px;
+        box-shadow: #2c656d -5px 5px;
     }
     
     #itinerary {
@@ -354,7 +356,7 @@ a:hover {
     }
 
     #itinerary-container {
-        box-shadow: lightseagreen -5px 5px;
+        box-shadow: #9f8f80 -5px 5px;
     }
     
     #trails {
@@ -363,7 +365,7 @@ a:hover {
         grid-row-start: 8;
         grid-row-end: 9;
         padding: 25px;
-        box-shadow: darkslateblue -5px 5px;
+        box-shadow: #5b653d -5px 5px;
     }
 
     .display-logo {
